Função de adicionar status ao jogo feita
